[project]
name = "llm-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.9.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openai>=2.26.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
